<resources>
    <string name="app_name">Sharing</string>
    <string name="title_app">Sharing</string>
    <string name="username">username</string>
    <string name="sign_in">Sign in</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="mode">mode</string>

    <string name="confirm_password">confirm password</string>
    <string name="go_to_login">Go to login</string>
    <string name="cd_google_logo">google logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="or_login_with_google">or login with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_photos_n">Your Photos</string>
    <string name="pics_from_friends_n">Pics from Friends</string>
    <string name="menu">Menu</string>
    <string name="image_from_gallery">Image from gallery</string>
    <string name="who">who</string>
    <string name="filter_screen_title">Apply filters and find your photos!</string>
    <string name="when">when</string>
    <string name="where">where</string>
    <string name="what">what</string>
    <string name="see_your_photos">See your photos</string>
    <string name="options">options</string>
    <string name="theme">theme</string>
    <string name="theme_black">Cool Black</string>
    <string name="theme_info">This feature is yet to be implemented</string>
    <string name="save">Save</string>
    <string name="friends">Friends</string>
    <string name="save_and_go_back">Save and Go Back</string>
    <string name="cancel">Cancel</string>
    <string name="from">From</string>
    <string name="tags">Tags</string>
    <string name="add_tag">add tag</string>
    <string name="new_tag">new tag</string>
    <string name="image_shared_with_you_by">Image shared with you by </string>
    <string name="processing_progress_bar">We are processing your photos.\nPlease do not close the application.</string>
    <string name="search_your_tags">Search your tags</string>
    <string name="search_by_names">Search by names</string>
    <string name="saving_your_data">Saving your data</string>
    <string name="logging_you_in">Logging you in...</string>
</resources>